syntax = "proto3";


package genproto;
option go_package = "genproto/post_service";

message CreatePostReq {
    string id = 1;
    string text = 2;
    string content = 3;
    string publication_date = 4;
    string user_id = 5;
    string created_at = 6;
    string updated_at = 7;
}

message PostResponse {
    string id = 1;
    string text = 2;
    string content = 3;
    string publication_date = 4;
    string user_id = 5;
    string created_at = 6;
    string updated_at = 7;
}
